--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
-    <a [routerLink]="['/']">YelpCamp</a>
+    <a [routerLink]="['/']"><mat-icon>terrain</mat-icon> YelpCamp</a>
   </span>
   <span class="spacer"></span>
   <ul>
