--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
   <div
     class="landing-ripple-container mat-elevation-z4"
     matRipple
-    [matRippleColor]="'white'"
+    [matRippleColor]="'rgba(0,0,0,.2)'"
     routerLink="/campgrounds"
   >
     View All Campgrounds
