added user module, its related code and some bug fixes

--- a/src/app/campgrounds/campground-create/campground-create.component.html
+++ b/src/app/campgrounds/campground-create/campground-create.component.html
@@ -133,7 +133,7 @@
       class="campground-create-submit"
       color="primary"
       type="submit"
-      [disabled]="isLoading"
+      [disabled]="isLoading || !form.valid"
     >
       Submit
     </button>
