--- a/src/app/campgrounds/show-campground/show-campground.component.css
+++ b/src/app/campgrounds/show-campground/show-campground.component.css
@@ -2,6 +2,15 @@
   display: block;
 }
 
+/* Used by custom attribute directive TextTruncateEllipsisDirective, ayTextTruncateEllipsis */
+.is-text-truncate-ellipsis {
+  text-align: left;
+  white-space: nowrap;
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .camp-container {
   margin-top: 30px;
   width: 80%;
@@ -68,6 +77,14 @@ mat-form-field {
   margin-bottom: 5px;
 }
 
+.camp-submitted-by a {
+  text-decoration: none;
+}
+
+.camp-submitted-by a:hover {
+  text-decoration: underline;
+}
+
 .camp-submitted-by .camp-author {
   font-weight: 700;
 }
@@ -107,6 +124,10 @@ mat-panel-title {
   height: 60px;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.commet-author-avatar img:hover {
+  cursor: pointer;
 }
 
 .comment-author-name {
