--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,6 +5,10 @@ ul {
   display: flex;
 }
 
+li {
+  margin-bottom: -15px;
+}
+
 a {
   text-decoration: none;
   color: #fff;
@@ -12,4 +16,12 @@ a {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.user-avatar-badge img {
+  width: 35px;
+  height: 35px;
+  object-fit: cover;
+  border-radius: 50%;
+  overflow: hidden;
 }
