minor bug fixes

--- a/src/app/auth/user/user.component.html
+++ b/src/app/auth/user/user.component.html
@@ -116,8 +116,8 @@
                 email
               />
               <mat-hint
-                >Enter a valid e-mail ID to help your recover your password,
-                just in case</mat-hint
+                >Enter a valid e-mail ID to help you recover your password, just
+                in case</mat-hint
               >
             </mat-form-field>
             <button
