--- a/src/app/auth/reset-password/reset-password.component.css
+++ b/src/app/auth/reset-password/reset-password.component.css
@@ -1,18 +1,13 @@
-.login-container {
+.reset-container {
   width: 40%;
   margin: 5px auto;
   margin-top: 2rem;
 }
 
-.login-container h1 {
+.reset-container h1 {
   text-align: center;
   margin-bottom: 15px;
 }
-
-/* mat-card {
-  width: 60%;
-  margin: 1rem auto;
-} */
 
 mat-form-field {
   width: 100%;
@@ -21,9 +16,4 @@ mat-form-field {
 
 .submit-btn button {
   margin-top: 10px;
-}
-
-.submit-btn {
-  display: flex;
-  justify-content: space-between;
 }
