enable the forgot password only when email field is valid

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -89,6 +89,7 @@
           type="button"
           *ngIf="!isLoading"
           (click)="onForgotPassword(loginForm)"
+          [disabled]="!email || emailInput.invalid"
         >
           Forgot Password
         </button>
