added hint to enable Forgot Password button on Login page

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,6 +27,9 @@
         <mat-error *ngIf="emailInput.invalid"
           >Please enter a valid email.</mat-error
         >
+        <mat-hint
+          >Enter a valid email to signin or to enable Forgot Password
+        </mat-hint>
       </mat-form-field>
 
       <h3 style="text-align: center;">OR</h3>
